--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
 </head>
 <body>
 <div id="app">
-
+    <h1 class="title">Living without an aim is like sailing without a compass...</h1>
+    <div class="shark"></div>
+    <div class="bubbles"></div>
     <div class="footer">
         &copy; {{Year}} MocBit &nbsp;
         <a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="知识共享许可协议" style="border-width:0" height="12" src="image/80x15.png" /></a>
